--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
-    "name": "MakeItSo",
-    "version": "0.1.0"
+    "name": "makeitso",
+    "description": "Command things with your words, just like Picard",
+    "version": "0.1.0",
+    "author": {
+        "name": "Ben Farrell",
+        "url": "http://benfarrell.com/"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/bengfarrell/makeitso.git"
+    }
 }
